fix end time label on timer; fix activity overlap navigation

--- a/src/app/core/components/navigation/navigation.component.scss
+++ b/src/app/core/components/navigation/navigation.component.scss
@@ -4,6 +4,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
+  z-index: 1;
   width: 100%;
 
   display: flex;
